--- a/pardus-not-defteri/package.json
+++ b/pardus-not-defteri/package.json
@@ -9,21 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.6.0",
+    "framer-motion": "^12.18.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "i18next": "^25.2.1",
     "react-i18next": "^15.5.3",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "zustand": "^5.0.5",
-    "localforage": "^1.10.0",
-    "@google/genai": "^1.6.0",
-    "lucide-react": "^0.522.0",
-    "framer-motion": "^12.18.1",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "@tailwindcss/postcss": "^4.1.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
   }
 }
