--- a/pardus-not-defteri/package.json
+++ b/pardus-not-defteri/package.json
@@ -16,7 +16,8 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "npm run build && electron-builder",
-    "electron:build-win": "npm run build && electron-builder --win --x64"
+    "electron:build-win": "npm run build && electron-builder --win --x64",
+    "electron:build-linux": "npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
     "react": "^19.1.0",
