--- a/pardus-not-defteri/package.json
+++ b/pardus-not-defteri/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "description": "Pardus - Electron",
   "main": "electron.cjs",
+  "homepage": "https://github.com/denizzhansahin/pardus-projeler-teknofest-2025",
   "author": {
     "name": "Denizhan Şahin - Space Teknopoli",
     "email": "mailimyoktursakinyazma@mailimyoktursakinyazma.com"
@@ -30,8 +31,6 @@
     "@types/node": "^22.14.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-
-
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.1",
@@ -48,7 +47,7 @@
     "typescript-eslint": "^8.3.0",
     "wait-on": "^8.0.3"
   },
-    "build": {
+  "build": {
     "appId": "com.denizhan.pardusNotDefteri",
     "productName": "Pardus Not Defteri with Gemini",
     "files": [
@@ -82,5 +81,4 @@
       "icon": "assets/Pardus-Logo.icns"
     }
   }
-
 }
