--- a/pardus-not-defteri/package.json
+++ b/pardus-not-defteri/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-pardus-electron",
+  "name": "pardus-not-defteri",
   "private": true,
   "version": "0.0.0",
   "type": "module",
