--- a/flowmind-pardus/package.json
+++ b/flowmind-pardus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pardusrun-dashboard",
+  "name": "pardus-flowmind",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,17 +22,20 @@
     "electron:build-mac-intel": "npm run build && electron-builder --mac --x64"
   },
   "dependencies": {
-    "@google/genai": "^1.6.0",
-    "lucide-react": "^0.523.0",
+    "@google/genai": "0.12.0",
+    "html-to-image": "1.11.11",
+    "jspdf": "2.5.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "reactflow": "11.11.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
@@ -47,9 +50,10 @@
     "typescript-eslint": "^8.3.0",
     "wait-on": "^8.0.3"
   },
-  "build": {
-    "appId": "com.denizhan.pardusRun",
-    "productName": "Pardus Run with Gemini",
+
+    "build": {
+    "appId": "com.denizhan.pardusFlowmind",
+    "productName": "Pardus Flowmind with Gemini",
     "files": [
       "dist/**/*",
       "electron.cjs",
