--- a/pardus-dream/package.json
+++ b/pardus-dream/package.json
@@ -18,7 +18,8 @@
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "npm run build && electron-builder",
     "electron:build-win": "npm run build && electron-builder --win --x64",
-    "electron:build-linux": "npm run build && electron-builder --linux --x64"
+    "electron:build-linux": "npm run build && electron-builder --linux --x64",
+    "electron:build-mac-intel": "npm run build && electron-builder --mac --x64"
   },
   "dependencies": {
     "react": "^19.1.0",
