--- a/pardus-hizli-klavye/package.json
+++ b/pardus-hizli-klavye/package.json
@@ -7,7 +7,7 @@
   "main": "electron.cjs",
   "homepage": "https://github.com/denizzhansahin/pardus-projeler-teknofest-2025",
   "author": {
-    "name": "Denizhan Şahin - Space Teknopoli",
+    "name": "Denizhan Şahin - Space Teknopoli Hızlı Klavye",
     "email": "mailimyoktursakinyazma@mailimyoktursakinyazma.com"
   },
     "scripts": {
